--- a/sagemaker_vllm/vllm_by_model_id/.env
+++ b/sagemaker_vllm/vllm_by_model_id/.env
@@ -1,2 +1,2 @@
-# https://docs.vllm.ai/en/latest/serving/env_vars.html
+# Environment Variables: https://docs.vllm.ai/en/latest/serving/env_vars.html
 export HF_TOKEN="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"
