--- a/sagemaker_vllm/dockerfile
+++ b/sagemaker_vllm/dockerfile
@@ -4,7 +4,7 @@ FROM vllm/vllm-openai:$VLLM_VERSION
 # 设置工作目录
 WORKDIR /app
 
-# 安装必要的包
+# 修改restapi
 RUN sed -i 's|/v1/chat/completions|/invocations|g' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py; \
     sed -i 's|/health|/ping|g' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py;
 
