--- a/sagemaker_vllm/dockerfile
+++ b/sagemaker_vllm/dockerfile
@@ -4,6 +4,9 @@ FROM vllm/vllm-openai:$VLLM_VERSION
 # 设置工作目录
 WORKDIR /app
 
+# 复制当前目录下的内容到容器内的/app
+COPY app/ /app
+
 # 修改restapi
 RUN sed -i '/if __name__ == "__main__":/i\
 @router.get("/ping")\n\
@@ -21,11 +24,8 @@ async def invocations(request: Union[ChatCompletionRequest, CompletionRequest],\
     else:\n\
         return JSONResponse("unknow request paras",\n\
                             status_code=HTTPStatus.BAD_REQUEST)\n\
-' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py;
-
-
-# 复制当前目录下的内容到容器内的/app
-COPY app/ /app
+' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py; \
+chmod +x /app/serve
 
 # 让端口8080在容器外可用
 EXPOSE 8080
