--- a/sagemaker_vllm/dockerfile
+++ b/sagemaker_vllm/dockerfile
@@ -9,22 +9,32 @@ COPY app/ /app
 
 # 修改restapi
 RUN sed -i '/if __name__ == "__main__":/i\
-@router.get("/ping")\n\
+\@router.get("/ping")\n\
 async def ping() -> Response:\n\
-    return await health()\n\
+\    return await health()\n\
 \n\
 from typing import Union\n\
 @router.post("/invocations")\n\
 async def invocations(request: Union[ChatCompletionRequest, CompletionRequest],\n\
-                                 raw_request: Request):\n\
-    if isinstance(request, ChatCompletionRequest):\n\
-        return await create_chat_completion(request, raw_request)\n\
-    elif isinstance(request, CompletionRequest):\n\
-        return await create_completion(request, raw_request)\n\
-    else:\n\
-        return JSONResponse("unknow request paras",\n\
-                            status_code=HTTPStatus.BAD_REQUEST)\n\
+\                                 raw_request: Request):\n\
+\    if isinstance(request, ChatCompletionRequest):\n\
+\        return await create_chat_completion(request, raw_request)\n\
+\    elif isinstance(request, CompletionRequest):\n\
+\        return await create_completion(request, raw_request)\n\
+\    else:\n\
+\        return JSONResponse("unknow request paras",\n\
+\                            status_code=HTTPStatus.BAD_REQUEST)\n\
 ' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py; \
+sed -i 's/model: str/model: Optional[str] = None/' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/protocol.py ; \
+sed -i 's/extra="forbid"//1' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/protocol.py ; \
+sed -i '/async def _check_model/,/:$/!b;/:$/a\
+\        if request.model is None:\n\
+\            return None\n\
+' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/serving_engine.py; \
+sed -i '/def _maybe_get_adapters/,/:$/!b;/:$/a\
+\        if request.model is None:\n\
+\            return None, None\n\
+' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/serving_engine.py; \
 chmod +x /app/serve
 
 # 让端口8080在容器外可用
