--- a/sagemaker_vllm/dockerfile
+++ b/sagemaker_vllm/dockerfile
@@ -8,7 +8,9 @@ WORKDIR /app
 COPY app/ /app
 
 # 修改restapi
-RUN sed -i '/if __name__ == "__main__":/i\
+RUN \
+export PYTHON_SITEPACKAGES=`python3 -c "import site; print(site.getsitepackages()[0])"`; \
+sed -i '/if __name__ == "__main__":/i\
 \@router.get("/ping")\n\
 async def ping() -> Response:\n\
 \    return await health()\n\
@@ -24,17 +26,17 @@ async def invocations(request: Union[ChatCompletionRequest, CompletionRequest],\
 \    else:\n\
 \        return JSONResponse("unknow request paras",\n\
 \                            status_code=HTTPStatus.BAD_REQUEST)\n\
-' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/api_server.py; \
-sed -i 's/model: str/model: Optional[str] = None/' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/protocol.py ; \
-sed -i 's/extra="forbid"//1' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/protocol.py ; \
+' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/api_server.py; \
+sed -i 's/model: str/model: Optional[str] = None/' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/protocol.py ; \
+sed -i 's/extra="forbid"//1' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/protocol.py ; \
 sed -i '/async def _check_model/,/:$/!b;/:$/a\
 \        if request.model is None:\n\
 \            return None\n\
-' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/serving_engine.py; \
+' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/serving_engine.py; \
 sed -i '/def _maybe_get_adapters/,/:$/!b;/:$/a\
 \        if request.model is None:\n\
 \            return None, None\n\
-' /usr/local/lib/python3.10/dist-packages/vllm/entrypoints/openai/serving_engine.py; \
+' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/serving_engine.py; \
 chmod +x /app/serve
 
 # 让端口8080在容器外可用
