--- a/sagemaker_vllm/dockerfile
+++ b/sagemaker_vllm/dockerfile
@@ -1,5 +1,6 @@
+ARG VLLM_REPO
 ARG VLLM_VERSION
-FROM vllm/vllm-openai:$VLLM_VERSION
+FROM $VLLM_REPO:$VLLM_VERSION
 
 # 设置工作目录
 WORKDIR /app
@@ -12,8 +13,8 @@ RUN \
 export PYTHON_SITEPACKAGES=`python3 -c "import site; print(site.getsitepackages()[0])"`; \
 sed -i '/if __name__ == "__main__":/i\
 \@router.get("/ping")\n\
-async def ping() -> Response:\n\
-\    return await health()\n\
+async def ping(raw_request: Request) -> Response:\n\
+\    return await health(raw_request)\n\
 \n\
 from typing import Union\n\
 @router.post("/invocations")\n\
@@ -37,6 +38,10 @@ sed -i '/def _maybe_get_adapters/,/:$/!b;/:$/a\
 \        if request.model is None:\n\
 \            return None, None\n\
 ' ${PYTHON_SITEPACKAGES}/vllm/entrypoints/openai/serving_engine.py; \
+apt install unzip; \
+curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"; \
+unzip awscliv2.zip; rm awscliv2.zip; \
+sudo ./aws/install; rm -rf ./aws; \
 chmod +x /app/serve
 
 # 让端口8080在容器外可用
